@@ -1,4 +1,5 @@
 
+	* fixed UNC path normalization (on windows, unless UNC paths are disabled)
 	* fixed possible crash when enabling multiple connections per IP
 	* fixed typo in win vista specific code, breaking the build
 	* change default of rate_limit_utp to true
